fabric/testdata/out/ing_spp-bulk-updater-post-api-jobs-patches-users-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"https://identity.zalando.com/managed-id\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\") -\u003e tee(\"https://made-up-svc.smart-product-platform-test.zalan.do\")","zalando.org/skipper-predicate":"Weight(4)
      \u0026\u0026 Path(\"/api/jobs/patches\") \u0026\u0026 Method(\"POST\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"soceanainn\",
      \"https://identity.zalando.com/managed-id\", \"opolosin\", \"https://identity.zalando.com/managed-id\",
      \"adudoladov\", \"https://identity.zalando.com/managed-id\", \"xgallegopujo\",
      \"https://identity.zalando.com/managed-id\", \"bcullen\", \"https://identity.zalando.com/managed-id\",
      \"enewman\", \"https://identity.zalando.com/managed-id\", \"kseyitogulla\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"application":"spp-bulk-updater","controller-uid":"e586799c-5510-4a61-80cb-bead7c9b588a","deployment-id":"d-bifte6rn17yu4n5xcyopwz7fr","pipeline-id":"l-2pzi5f7y9tucwozo68dap5dcp2"},"name":"spp-bulk-updater-post-api-jobs-patches-users-all","namespace":"default"},"spec":{"rules":[{"host":"spp-bulk-updater.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-bulk-updater","servicePort":"http"}," [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm") -> tee("https://made-up-svc.smart-product-platform-test.zalan.do")
    zalando.org/skipper-predicate: Weight(4) && Path("/api/jobs/patches") && Method("POST")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "soceanainn",
      "https://identity.zalando.com/managed-id", "opolosin", "https://identity.zalando.com/managed-id",
      "adudoladov", "https://identity.zalando.com/managed-id", "xgallegopujo", "https://identity.zalando.com/managed-id",
      "bcullen", "https://identity.zalando.com/managed-id", "enewman", "https://identity.zalando.com/managed-id",
      "kseyitogulla") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-04-23T13:37:30Z"
  generation: 1
  labels:
    application: spp-bulk-updater
    controller-uid: e586799c-5510-4a61-80cb-bead7c9b588a
    deployment-id: d-bifte6rn17yu4n5xcyopwz7fr
    pipeline-id: l-2pzi5f7y9tucwozo68dap5dcp2
  name: spp-bulk-updater-post-api-jobs-patches-users-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-bulk-updater
    uid: e586799c-5510-4a61-80cb-bead7c9b588a
  resourceVersion: "1379111007"
  uid: d0f87199-0cf4-4c41-bc41-237b228b0ea5
spec:
  rules:
  - host: spp-bulk-updater.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-bulk-updater
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
